<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hangman"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jsonkuan.hangman.HangmanActivity">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:text="@string/you_guessed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/previousGuess" />

    <TextView
        android:text="@string/remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:id="@+id/remainingGuesses" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/hang10"
        android:layout_gravity="center"
        android:layout_marginTop="73dp"
        android:id="@+id/imageView" />

    <TextView
        android:hint="@string/currentword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="50dp"
        android:textSize="24sp"
        android:textAlignment="center"
        android:id="@+id/wordToGuess" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.35"
        android:weightSum="1">

        <EditText
            android:id="@+id/guessEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:gravity="start"
            android:maxLength="1"
            android:hint="@string/enter_your_guess"
            android:digits="@string/alpha_numerical_characters"
            android:layout_weight="1.00" />

        <Button
           android:text="@string/guess_button_label"
           android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:id="@+id/guessButton"
            android:onClick="guess"/>
    </LinearLayout>

</LinearLayout>
